--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,8 @@
 # This file lists all individuals having contributed content to the repository.
 
+Cameron Eng <github.com/c-eng> <388@holbertonschool.com> <@c33Eng>
+Bryan Leung <github.come/byn3> <369@holbertonschool.com> <@bynleung>
+
 MJ Johnson <61@holbertonschool.com>
 David John Coleman II <djc_fileno@davidjohncoleman.com>
 Kimberly Wong <kjowong@gmail.com>
